--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(histogram_equalizer LANGUAGES CXX CUDA)
 set(CMAKE_CXX_STANDARD 20)
 
 find_package(CUDAToolkit REQUIRED)
+set(CUDA_ARCHITECTURES 86)
 
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
